--- a/index.html
+++ b/index.html
@@ -589,20 +589,20 @@
 
 
 	<footer>
-		<div class="container py-5 d-flex">
-			<div class="row h-75  ">
+		<div class="container pt-5 d-flex">
+			<div class="row pb-5 justify-content-between align-items-center border-bottom border-gray w-100">
 				<div class="col-12 col-lg-6">
 					<div class="d-flex flex-column">
-						<div class="h1 my-3 w-75 text-white">Learning Now</div>
+						<div class="h1 my-3  text-white">Learning Now</div>
 						<div class="h6 font-weight-light mt-1 text-muted">
 							Lorem ipsum dolor sit amet, consectetur adipiscing
 							elit. At pellentesque orci convallis purus.
-						</div>	
+						</div>
 					</div>
 				</div>
-				<div class="col-12 col-lg-6 col-md-10">
-					<div class="d-flex py-5">
-						<div class="d-flex">
+				<div class="col-12 col-lg-6 col-md-10 ">
+					<div class="d-flex py-5 ">
+						<div class="d-flex ">
 							<div class="mr-4">
 								<button type="button" class="btn btn-primary px-4 text-white">
 									Get Started
@@ -616,7 +616,10 @@
 						</div>
 					</div>
 				</div>
-				<hr>
+			</div>
+		</div>
+		<div class="container pt-5 d-flex">
+			<div class="py-5 row align-items-center justify-content-between">
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="d-flex flex-column mt-4">
 						<div class="h1 my-3  text-white">ZURI</div>
@@ -628,7 +631,7 @@
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="d-flex flex-column rounded mt-4 ">
-						<div class="secondary-text my-3 w-75 h6">Features</div>	
+						<div class="secondary-text my-3 w-75 h6">CONTACT</div>
 						<p class="h6 font-weight-light mt-4 text-muted">
 							Email: education@zuri.com
 							elit. At pellentesque orci convallis purus.
@@ -637,18 +640,23 @@
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="d-flex flex-column rounded mt-4 ">
-						<div class="secondary-text my-3 w-75 h6">Features</div>	
+						<div class="secondary-text my-3 w-75 h6">SUBSCRIBE</div>
 						<div class="mt-4 ">
 							<form class="form-inline">
 								<label class="sr-only" for="inlineFormInputName2">Name</label>
 								<input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2"
 									placeholder="Search..." />
 								<button type="submit" class="btn btn-primary mb-2">
-									<i class="fab fa-search"></i>
+									<i class="fab fa-search"></i>Submit
 								</button>
 							</form>
 						</div>
 					</div>
+				</div>
+			
+				<div class="d-flex justify-content-between pt-5 align-items-center text-muted w-100">
+					<strong class="text-white">Privacy Policy Terms & Conditions</strong>
+					<p>&copy 2020</a>
 				</div>
 			</div>
 		</div>
