--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 			<div class="row pb-5 justify-content-between align-items-center border-bottom border-gray w-100">
 				<div class="col-12 col-lg-6">
 					<div class="d-flex flex-column">
-						<div class="h1 my-3  text-white">Learning Now</div>
+						<div class="h1 my-3 font-weight-light text-white">Learning Now</div>
 						<div class="h6 font-weight-light mt-1 text-muted">
 							Lorem ipsum dolor sit amet, consectetur adipiscing
 							elit. At pellentesque orci convallis purus.
@@ -622,7 +622,7 @@
 			<div class="py-5 row align-items-center justify-content-between">
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="d-flex flex-column mt-4">
-						<div class="h1 my-3  text-white">ZURI</div>
+						<div class="h1 my-3 font-weight-bold text-white">ZURI</div>
 						<div class="h6 font-weight-light mt-1 text-muted">
 							Lorem ipsum dolor sit amet, consectetur adipiscing
 							elit. At pellentesque orci convallis purus.
