--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
 	<link rel="stylesheet" href="./assets/styles/index.css" />
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<script src="https://kit.fontawesome.com/1395a25f53.js" crossorigin="anonymous"></script>
 	<link
 		href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
 		rel="stylesheet" />
@@ -593,7 +594,7 @@
 			<div class="row pb-5 justify-content-between align-items-center border-bottom border-gray w-100">
 				<div class="col-12 col-lg-6">
 					<div class="d-flex flex-column">
-						<div class="h1 my-3 font-weight-light text-white">Learning Now</div>
+						<div class="h1 my-3 font-weight-light text-white">Learning Now!</div>
 						<div class="h6 font-weight-light mt-1 text-muted">
 							Lorem ipsum dolor sit amet, consectetur adipiscing
 							elit. At pellentesque orci convallis purus.
@@ -654,9 +655,9 @@
 					</div>
 				</div>
 			
-				<div class="d-flex justify-content-between pt-5 align-items-center text-muted w-100">
+				<div class="d-flex justify-content-between pt-5 border-top align-items-center text-muted w-100">
 					<strong class="text-white">Privacy Policy Terms & Conditions</strong>
-					<p>&copy 2020</a>
+					<p>&copy 2020 ZURI</a>
 				</div>
 			</div>
 		</div>
