--- a/index.html
+++ b/index.html
@@ -590,82 +590,82 @@
 
 
 	<footer>
-		<div class="container pt-5 d-flex">
-			<div class="row pb-5 justify-content-between align-items-center border-bottom border-gray w-100">
-				<div class="col-12 col-lg-6">
-					<div class="d-flex flex-column">
-						<div class="h1 my-3 font-weight-light text-white">Learning Now!</div>
-						<div class="h6 font-weight-light mt-1 text-muted">
-							Lorem ipsum dolor sit amet, consectetur adipiscing
-							elit. At pellentesque orci convallis purus.
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-lg-6 col-md-10 ">
-					<div class="d-flex py-5 ">
-						<div class="d-flex ">
-							<div class="mr-4">
-								<button type="button" class="btn btn-primary px-4 text-white">
-									Get Started
-								</button>
-							</div>
-							<div>
-								<button type="button" class="btn btn-outline-light px-4 btn-text-white">
-									Contact
-								</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="container pt-5 d-flex">
-			<div class="py-5 row align-items-center justify-content-between">
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="d-flex flex-column mt-4">
-						<div class="h1 my-3 font-weight-bold text-white">ZURI</div>
-						<div class="h6 font-weight-light mt-1 text-muted">
-							Lorem ipsum dolor sit amet, consectetur adipiscing
-							elit. At pellentesque orci convallis purus.
-						</div>
-					</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="d-flex flex-column rounded mt-4 ">
-						<div class="secondary-text my-3 w-75 h6">CONTACT</div>
-						<p class="h6 font-weight-light mt-4 text-muted">
-							Email: education@zuri.com
-							elit. At pellentesque orci convallis purus.
-						</p>
-					</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="d-flex flex-column rounded mt-4 ">
-						<div class="secondary-text my-3 w-75 h6">SUBSCRIBE</div>
-						<div class="mt-4 ">
-							<form class="form-inline">
-								<label class="sr-only" for="inlineFormInputName2">Name</label>
-								<input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2"
-									placeholder="Search..." />
-								<button type="submit" class="btn btn-primary mb-2">
-									<i class="fab fa-search"></i>Submit
-								</button>
-							</form>
-						</div>
-					</div>
-				</div>
-			
-				<div class="d-flex justify-content-between pt-5 border-top align-items-center text-muted w-100">
-					<strong class="text-white">Privacy Policy Terms & Conditions</strong>
-					<p>&copy 2020 ZURI</a>
-				</div>
-			</div>
-		</div>
-		<hr>
-		<div>
+        <div class="container pt-5 d-flex">
+            <div class="row pb-5 justify-content-between align-items-center border-bottom border-gray w-100">
+                <div class="col-12 col-lg-6">
+                    <div class="d-flex flex-column">
+                        <div class="h1 my-3 font-weight-light text-white">Learning Now!</div>
+                        <div class="h6 font-weight-light mt-1 text-muted">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. At pellentesque orci convallis purus.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 col-md-10 ">
+                    <div class="d-flex py-5 ">
+                        <div class="d-flex ">
+                            <div class="mr-4">
+                                <button type="button" class="btn btn-primary px-4 text-white">
+                                    Get Started
+                                </button>
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-outline-light px-4 btn-text-white">
+                                    Contact
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container pt-5 d-flex">
+            <div class="py-5 row align-items-center justify-content-between">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex flex-column mt-4">
+                        <div class="h1 my-3 font-weight-bold text-white">ZURI</div>
+                        <div class="h6 font-weight-light mt-1 text-muted">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. At pellentesque orci convallis purus.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex flex-column rounded mt-4 ">
+                        <div class="secondary-text my-3 w-75 h6">CONTACT</div>
+                        <p class="h6 font-weight-light mt-4 text-muted">
+                            Email: education@zuri.com
+                            elit. At pellentesque orci convallis purus.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="d-flex flex-column rounded w-100 mt-4 ">
+                        <div class="secondary-text my-3 w-100 h6">SUBSCRIBE</div>
+                        <div class="mt-4 ">
+                            <form class="form-inline">
+                                <label class="sr-only" for="inlineFormInputName2">Name</label>
+                                <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2"
+                                    placeholder="Search..." />
+                                <button type="submit" class="btn btn-primary mb-2">
+                                    <i class="fab fa-search"></i>Submit
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
 
-		</div>
-	</footer>
+                <div class="d-flex justify-content-between pt-4 border-top align-items-center text-muted w-100">
+                    <strong class="text-white">Privacy Policy Terms & Conditions</strong>
+                    <p>&copy 2020 ZURI</a>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
