--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<a class="nav-link" href="#">Classroom</a>
 					</li>
 					<li class="nav-item px-2">
-						<a class="nav-link" href="#">Pricing</a>
+						<a class="nav-link" href="about.html">About</a>
 					</li>
 					<li class="nav-item px-2">
 						<a class="nav-link" href="#">Contact</a>
