--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<ul class="navbar-nav">
 					<li class="nav-item social-links">
 						<a class="nav-link" href="#">
-							<i class="fab fa-facebook"></i>
+							<i class="fa fa-facebook"></i>
 						</a>
 					</li>
 					<li class="nav-item social-links mx-0 mx-md-2 my-md-0 my-2">
