--- a/coursepage.html
+++ b/coursepage.html
@@ -149,32 +149,32 @@
             </div>
             <div>
                 <div class="row pt-5">
-                    <div class="col-2 col-md-2 col-lg-2 d-sm-none d-md-block ">
+                    <div class="col-md-2 col-lg-2 text-center d-sm-none d-md-block ">
                         <div class="align-items-center justify-content-center ">
                             <button class="btn btn-outline-dark btn-lg" type="button">All</button>
                         </div>
                     </div>
-                    <div class="col-2 col-md-2 col-lg-2 text-center d-sm-none d-md-block">
+                    <div class=" col-md-2 col-lg-2 text-center d-sm-none d-md-block">
                         <div class="align-items-center justify-content-center ">
                             <button class="btn text-muted btn-lg" type="button">Engineering</button>
                         </div>
                     </div>
-                    <div class="col-2 col-md-2 col-lg-2 text-center d-sm-none d-md-block">
+                    <div class=" col-md-2 col-lg-2 text-center d-sm-none d-md-block">
                         <div class="align-items-center justify-content-center ">
                             <button class="btn text-muted btn-lg" type="button">Economics</button>
                         </div>
                     </div>
-                    <div class="col-2 col-md-2 col-lg-2 text-center d-sm-none d-md-block">
+                    <div class="col-md-2 col-lg-2 text-center d-sm-none d-md-block">
                         <div class="align-items-center justify-content-center ">
                             <button class="btn text-muted btn-lg" type="button">Humanitics</button>
                         </div>
                     </div>
-                    <div class="col-2 col-md-2 col-lg-2 text-center d-sm-none d-md-block">
+                    <div class=" col-md-2 col-lg-2 text-center d-sm-none d-md-block">
                         <div class="align-items-center justify-content-center ">
                             <button class="btn text-muted btn-lg" type="button">Science</button>
                         </div>
                     </div>
-                    <div class="col-2 col-md-2 col-lg-2 text-center d-sm-none d-md-block">
+                    <div class=" col-md-2 col-lg-2 text-center d-sm-none d-md-block">
                         <div class="align-items-center justify-content-center ">
                             <button class="btn text-muted btn-lg" type="button">Design</button>
                         </div>
