--- a/about.html
+++ b/about.html
@@ -62,6 +62,9 @@
                         <li class="nav-item px-2">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="staffpage.html">Teams</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item social-links">
@@ -85,6 +88,7 @@
 
 
         </nav>
+        
         <div class="row align-items-center pt-5 min-h-75">
             <div class="col-12">
                 <div class="container">
@@ -478,7 +482,7 @@
         </div>
     </div>
 
-
+<!-- FOOTER BEGINS HERE -->
 
     <footer>
         <div class="container pt-5 d-flex">
