--- a/coursepage.html
+++ b/coursepage.html
@@ -64,6 +64,10 @@
                         <li class="nav-item px-2">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="staffpage.html">Teams</a>
+                        </li>
+                        
                         
                     </ul>
                     <ul class="navbar-nav">
