--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 						<a class="nav-link" href="coursepage.html">Courses </a>
 					</li>
 					<li class="nav-item px-2">
-						<a class="nav-link" href="#">Blog</a>
-					</li>
-					<li class="nav-item px-2">
 						<a class="nav-link" href="#">Classroom</a>
 					</li>
 					<li class="nav-item px-2">
 						<a class="nav-link" href="about.html">About</a>
+					</li>
+					<li class="nav-item px-2">
+						<a class="nav-link" href="staffpage.html">Teams</a>
 					</li>
 					
 				</ul>
