fixed footer alignment

--- a/coursepage.html
+++ b/coursepage.html
@@ -661,8 +661,10 @@
                     </div>
                 </div>
 
-                <div class="d-flex justify-content-between pt-4 border-top align-items-center text-muted w-100">
-                    <strong class="text-white">Privacy Policy Terms & Conditions</strong>
+                <div class="col d-flex justify-content-between pt-4 border-top text-muted w-100">
+					<a href="#"><strong class="text-white">Privacy Policy </strong></a>
+					<a href="#"><strong class="text-white">Terms & Conditions </strong></a>
+					
                     <p>&copy 2020 ZURI</a>
                 </div>
             </div>
