--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                     <div class="d-flex flex-column rounded w-100 mt-4 ">
                         <div class="secondary-text my-3 w-100 h6">SUBSCRIBE</div>
                         <div class="mt-4 ">
-                            <form class="form-inline">
+                            <form class="form-inline w-100">
                                 <label class="sr-only" for="inlineFormInputName2">Name</label>
                                 <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2"
                                     placeholder="Search..." />
@@ -653,8 +653,10 @@
                     </div>
                 </div>
 
-                <div class="d-flex justify-content-between pt-4 border-top align-items-center text-muted w-100">
-                    <strong class="text-white">Privacy Policy Terms & Conditions</strong>
+                <div class="col d-flex justify-content-between pt-4 border-top text-muted w-100">
+					<a href="#"><strong class="text-white">Privacy Policy </strong></a>
+					<a href="#"><strong class="text-white">Terms & Conditions </strong></a>
+					
                     <p>&copy 2020 ZURI</a>
                 </div>
             </div>
